@@ -1,6 +1,5 @@
 package uk.gov.pay.connector.gateway.stripe.request;
 
-import com.google.common.collect.ImmutableMap;
 import org.junit.Before;
 import org.junit.Test;
 import org.junit.runner.RunWith;
@@ -13,11 +12,13 @@ import uk.gov.pay.connector.gateway.model.request.CaptureGatewayRequest;
 import uk.gov.pay.connector.gatewayaccount.model.GatewayAccountEntity;
 
 import java.net.URI;
+import java.util.Map;
 
 import static org.hamcrest.CoreMatchers.containsString;
 import static org.hamcrest.CoreMatchers.is;
 import static org.junit.Assert.assertThat;
 import static org.mockito.Mockito.when;
+import static uk.gov.pay.connector.gatewayaccount.model.GatewayAccountEntityFixture.aGatewayAccountEntity;
 
 @RunWith(MockitoJUnitRunner.class)
 public class StripeTransferOutRequestTest {
@@ -32,7 +33,7 @@ public class StripeTransferOutRequestTest {
 
     @Mock
     ChargeEntity charge;
-    @Mock
+
     GatewayAccountEntity gatewayAccount;
     @Mock
     StripeGatewayConfig stripeGatewayConfig;
@@ -42,7 +43,10 @@ public class StripeTransferOutRequestTest {
 
     @Before
     public void setUp() {
-        when(gatewayAccount.getCredentials()).thenReturn(ImmutableMap.of("stripe_account_id", stripeConnectAccountId));
+        gatewayAccount = aGatewayAccountEntity()
+                .withGatewayName("stripe")
+                .withCredentials(Map.of("stripe_account_id", stripeConnectAccountId))
+                .build();
 
         when(charge.getGatewayAccount()).thenReturn(gatewayAccount);
         when(charge.getExternalId()).thenReturn(chargeExternalId);
